Implementação de Banco de Dados, Correções na interface Facade, Implementacao de 'sistema de pagamento'.